tests/02-non-const-fn.rs
use constable::lookup;

#[lookup]
fn foo(_x: u8) -> bool {
    false
}

fn main() {}
